--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
+    "react-native": "^0.63.2",
+    "react-native-web": "^0.13.4",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1"
   },
