--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "install": "^0.13.0",
+    "npm": "^6.14.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-color": "^2.18.1",
